v1.01 - Dashboard articles Overflow fix.

--- a/app/styles/main_dashboard.scss
+++ b/app/styles/main_dashboard.scss
@@ -139,7 +139,6 @@
 
 /* ---- Section - Content bar ---- */
   section.dashboard-projects {
-    overflow: hidden;
     background: #fff;
     margin-bottom: 50px;
 
